testsuite/tests/dependent/should_fail/T17687.hs
{-# LANGUAGE ScopedTypeVariables #-}

module T17687 where

x :: forall a -> a -> a
x = x
