testsuite/tests/dependent/should_fail/T17687.stderr

T17687.hs:5:6: error:
    • Illegal visible, dependent quantification in the type of a term:
        forall a -> a -> a
      (GHC does not yet support this)
    • In the type signature: x :: forall a -> a -> a
